# OSG-OE-TechDemos

./: CMakeLists.txt  README.md
CMakeModules/: FindZLIB.cmake
cmake/: CopyFilesUtility.cmake
src/osg_pbr/: CMakeLists.txt  main.cpp
src/osg_satellite/: CMakeLists.txt  osgsatellite.cpp  starimgsimutils.cpp  starimgsimutils.h
src/osg_satellite/shaders/: satellitepoint.fs  satellitepoint.vs
src/osgsatellite/: CMakeLists.txt  osgsatellite.cpp  satellitepoint.fs  satellitepoint.vs
src/public_header/: helper.h  pbrstateset.h
src/public_shader/: pbr.fs  pbr.gs  pbr.vs
src/public_source/: helper.cpp  pbrstateset.cpp
